--- a/Crypto/DH101.md
+++ b/Crypto/DH101.md
@@ -1,1 +1,15 @@
+# DH101
 
+## Desc:  
+```
+Follow the guide, and try to learn something along the way.
+
+Link: http://alpha.8059blank.ml:4006
+Mirror: http://beta.8059blank.ml:4006
+
+Author: Samuel
+```
+## How to Solve
+
+
+Flag: ``
